<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    card_view:cardElevation="10dp"
    card_view:cardCornerRadius="4dp"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/className"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/classLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <com.applegrocer.scheduler.ChalkboardTextView
                    android:id="@+id/classStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <com.applegrocer.scheduler.ChalkboardTextView
                    android:id="@+id/classEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/sunIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/sunday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/monIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/monday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/tuesIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tuesday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/wedIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/wednesday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/thursIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/thursday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/friIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/friday"
                />
            <com.applegrocer.scheduler.ChalkboardTextView
                android:id="@+id/satIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/saturday"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

